<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnBoardingActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/select_interest"
        android:textColor="@color/grey_lighter"
        android:textSize="@dimen/text_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/select_interest2"
        android:textColor="@color/grey_light"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/btn_color"
        android:fontFamily="@font/montserrat_semibold"
        android:insetTop="@dimen/_0dp"
        android:insetBottom="@dimen/_0dp"
        android:paddingTop="@dimen/_12dp"
        android:paddingBottom="@dimen/_12dp"
        android:text="Continue"
        android:textSize="@dimen/_18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chipGroup"
        app:layout_constraintStart_toStartOf="@+id/chipGroup" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:chipSpacingHorizontal="@dimen/_20dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pop"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="💿 Vietnamese Pop"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_bass"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dubstep"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_rap"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hype_rap"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_chill"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chill"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_epic"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/epic"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_future_bass"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cinematic"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dark_pop"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bass"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_edm"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edm"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_trap"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vocal"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_uplifting"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edm_rap"
            app:chipMinHeight="@dimen/_34dp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_other"
            style="@style/Widget.Material3.Chip.Filter.Elevated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            app:chipMinHeight="@dimen/_34dp" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>