<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_10"
    tools:context=".ui.now_playing.PlayerActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/player_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_white"
        app:titleTextColor="@color/white" />


    <ImageButton
        android:id="@+id/btn_player_more_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/player_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_toolbar"
        app:srcCompat="@drawable/ic_more_vert_24_white" />

    <TextView
        android:id="@+id/tv_player_album"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:ellipsize="end"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/song_delta"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/player_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_toolbar" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_splitter"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/tv_player_album"
        app:layout_constraintStart_toStartOf="@+id/tv_player_album"
        app:layout_constraintTop_toBottomOf="@+id/player_toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:elevation="@dimen/_8dp"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <ImageView
            android:id="@+id/img_player_artwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/delta" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/img_player_artwork_circle"
        app:layout_constraintStart_toStartOf="@+id/cardView4"
        app:layout_constraintTop_toTopOf="@+id/guideline8">

        <TextView
            android:id="@+id/tv_player_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8dp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="TextView"
            android:textColor="@color/white"
            android:textSize="@dimen/_24dp" />

        <TextView
            android:id="@+id/tv_player_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="TextView"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/_16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img_player_artwork_circle"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="@+id/cardView4"
        app:layout_constraintTop_toTopOf="@+id/linearLayout4"
        app:srcCompat="@drawable/delta" />

    <SeekBar
        android:id="@+id/seek_bar_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:min="0"
        android:progressTint="?attr/colorPrimary"
        android:thumbOffset="0dp"
        app:layout_constraintEnd_toEndOf="@+id/img_player_artwork_circle"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <TextView
        android:id="@+id/tv_player_current_duration"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_marginStart="@dimen/_16dp"
        android:background="@android:color/transparent"
        android:text="@string/text_time_place_holder"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_player"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_player" />

    <TextView
        android:id="@+id/tv_total_duration"
        android:layout_width="16dp"
        android:layout_height="14dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:text="@string/text_time_place_holder"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_player"
        app:layout_constraintTop_toTopOf="@+id/tv_player_current_duration" />

    <ImageButton
        android:id="@+id/btn_previous"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_pause"
        app:layout_constraintEnd_toStartOf="@+id/btn_play_pause"
        app:layout_constraintStart_toEndOf="@+id/btn_player_shuffle"
        app:layout_constraintTop_toTopOf="@+id/btn_play_pause"
        app:srcCompat="@drawable/ic_skip_previous" />

    <ImageButton
        android:id="@+id/btn_play_pause"
        android:layout_width="@dimen/_64dp"
        android:layout_height="@dimen/_64dp"
        android:layout_marginTop="@dimen/_16dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_current_duration"
        app:srcCompat="@drawable/ic_play_circle" />

    <ImageButton
        android:id="@+id/btn_player_shuffle"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_previous"
        app:layout_constraintStart_toStartOf="@+id/seek_bar_player"
        app:layout_constraintTop_toTopOf="@+id/btn_previous"
        app:srcCompat="@drawable/ic_shuffle_off" />

    <ImageButton
        android:id="@+id/btn_player_next"
        android:layout_width="@dimen/_48dp"
        android:layout_height="@dimen/_48dp"
        android:layout_marginEnd="8dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_play_pause"
        app:layout_constraintEnd_toStartOf="@+id/btn_player_repeat"
        app:layout_constraintStart_toEndOf="@+id/btn_play_pause"
        app:layout_constraintTop_toTopOf="@+id/btn_play_pause"
        app:srcCompat="@drawable/ic_skip_next" />

    <ImageButton
        android:id="@+id/btn_player_repeat"
        android:layout_width="@dimen/_32dp"
        android:layout_height="@dimen/_32dp"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/btn_player_next"
        app:layout_constraintEnd_toEndOf="@+id/seek_bar_player"
        app:layout_constraintTop_toTopOf="@+id/btn_player_next"
        app:srcCompat="@drawable/ic_repeat_all" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_player_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:fontFamily="@font/montserrat_medium"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/grey_light"
        android:textSize="@dimen/_14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/img_player_artwork_circle"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/btn_play_pause" />


</androidx.constraintlayout.widget.ConstraintLayout>